classDiagram
    class Recette {
        +int idRecette
        +String titre
        +List<Ingredients> ingredients
        +String consignes
        +String categorie
        +String origine
    }

    class Ingredient {
        +int idIngredient
        +String nom
        +float quantite
        +String description
    }

    class Utilisateur {
        +int idUtilisateur
        +String pseudo
        +String motDePasse
        
    }

    class ListeDeCourses {
        +int idListeDeCourses
        +int idUtilisateur
        +List<Ingredients> ingredients
    }

    class Avis {
        +int idAvis
        +int idUtilisateur
        +int idRecette
        +float note
        +String commentaire
    }

    %% DAO and Service classes

    class RecetteDAO {
        +ajouterRecette() : bool
        +obtenirRecetteParId() : str
        +fermerConnexion() : bool
    }

    class RecetteService {
        +ajouterNouvelleRecette() : bool
        +afficherRecette() : str
    }

    class IngredientDAO {
        +ajouterIngredient() : bool
        +obtenirIngredientParId() : str
        +supprimerIngredient() : bool
    }

    class IngredientService {
        +ajouterNouvelIngredient() : bool
    }

    class UtilisateurService {
        +seConnecter(str,str) : bool
        +creerUnCompte() : bool
        +supprimerCompte() : bool
        +pseudoDejaUtilise() : bool
    }

    class UtilisateurDAO {
        +ajouterUtilisateur() : bool
        +obtenirUtilisateurParId() : Utilisateur
    }

    class ListeDeCoursesDAO {
        +ajouterListeDeCourses() : bool
        +obtenirListeParId() : ListeDeCourses
    }

    class ListeDeCoursesService {
        +ajouterNouvelleListe() : bool
    }

    class AvisDAO {
        +ajouterAvis() : bool
        +obtenirAvisParId() : Avis
    }

    class AvisService {
        +ajouterNouvelAvis() : bool
    }

    %% Relations
    RecetteService --> RecetteDAO : utilise
    RecetteDAO --> Recette : gère

    IngredientService --> IngredientDAO : utilise
    IngredientDAO --> Ingredient : gère

    UtilisateurService --> UtilisateurDAO : utilise
    UtilisateurDAO --> Utilisateur : gère

    ListeDeCoursesService --> ListeDeCoursesDAO : utilise
    ListeDeCoursesDAO --> ListeDeCourses : gère

    AvisService --> AvisDAO : utilise
    AvisDAO --> Avis : gère

    %% Cardinalities
    Utilisateur "1" --> "0..*" Recette : crée
    Utilisateur "1" --> "0..*" Avis : donne des avis
    Utilisateur "1" --> "0..1" ListeDeCourses : possède
    Recette "1.."--* "1.." Ingredient : contient
    ListeDeCourses "1.."--* "1.." Ingredient : contient
    Recette "1" --> "0..*" Avis : reçoit


